@@ -1,4 +1,4 @@
-/* $Id: font.h,v 1.1 2004/03/23 00:18:54 gvg Exp $
+/* $Id: font.h,v 1.2 2004/08/15 18:40:07 chorns Exp $
  *
  * COPYRIGHT:       See COPYING in the top level directory
  * PROJECT:         ReactOS system libraries
@@ -10,8 +10,6 @@
 
 #ifndef GDI32_FONT_H_INCLUDED
 #define GDI32_FONT_H_INCLUDED
-
-#include <windows.h>
 
 BOOL FASTCALL TextMetricW2A(TEXTMETRICA *tma, TEXTMETRICW *tmw);
 BOOL FASTCALL NewTextMetricW2A(NEWTEXTMETRICA *tma, NEWTEXTMETRICW *tmw);
