@@ -1,10 +1,4 @@
-#ifdef UNICODE
-#undef UNICODE
-#endif
-
-#undef WIN32_LEAN_AND_MEAN
-#include <windows.h>
-#include <ddk/ntddk.h>
+#include "precomp.h"
 #include <win32k/kapi.h>
 
 
